# darklua

./: .gitattributes  .gitignore  .gitlab-ci.yml  .luaurc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  RULES.md  rokit.toml  schema.json
.github/: pull_request_template.md
.github/workflows/: release.yml  site.yml  test.yml
bench_content/: download_content.sh
benches/: bench_utils.rs  parse_bench.rs  process_bench.rs
scripts/: install-lua.sh  test-commands.lua
site/: .babelrc  .eslintignore  .prettierignore  gatsby-browser.js  gatsby-config.js  gatsby-node.js  gatsby-ssr.js  package-lock.json  package.json
site/darklua-wasm/: .gitignore  Cargo.toml  LICENSE  README.md
site/darklua-wasm/javascript-tests/: darklua_wasm.spec.js  package-lock.json  package.json
site/darklua-wasm/src/: lib.rs  utils.rs
site/darklua-wasm/tests/: web.rs
site/src/: style.css
src/: ast_converter.rs  bin.rs  converter.rs  lib.rs  lua_generator.rs  parser.rs  utils.rs
src/cli/: convert.rs  error.rs  generate_json_schema.rs  minify.rs  mod.rs  process.rs  utils.rs  watch.rs
src/frontend/: .configuration.rs.pending-snap  async_worker.rs  configuration.rs  error.rs  mod.rs  options.rs  process_result.rs  resources.rs  utils.rs  work_cache.rs  work_item.rs  worker.rs  worker_tree.rs
src/generator/: dense.rs  mod.rs  readable.rs  token_based.rs  utils.rs
src/nodes/: arguments.rs  attributes.rs  block.rs  function_body.rs  function_call.rs  identifier.rs  literal_expression.rs  mod.rs  token.rs  typed_identifier.rs  variable.rs
src/parser/: ast_converter.rs  fullmoon_parser.rs  grammar.pest  mod.rs  parser_error.rs  pest_parser.rs
src/process/: expression_serializer.rs  mod.rs  mutation.rs  mutations.rs  new_processor.rs  new_visitor.rs  node_counter.rs  node_processor.rs  path.rs  post_visitor.rs  scope_visitor.rs  utils.rs  visitors.rs
src/rules/: append_text_comment.rs  call_parens.rs  compute_expression.rs  configuration_error.rs  context.rs  convert_const_to_local.rs  convert_index_to_field.rs  convert_luau_number.rs  convert_luau_numbers.rs  convert_square_root_call.rs  empty_do.rs  filter_early_return.rs  global_function_to_assign.rs  group_local.rs  inject_value.rs  make_assignment_local.rs  method_def.rs  mod.rs  no_local_function.rs  remove_assertions.rs  remove_attribute.rs  remove_call_match.rs  remove_comments.rs  remove_compound_assign.rs  remove_continue.rs  remove_debug_profiling.rs  remove_floor_division.rs  remove_generalized_iteration.rs  remove_if_expression.rs  remove_interpolated_string.rs  remove_method_call.rs  remove_nil_declarations.rs  remove_number_literals.rs  remove_spaces.rs  remove_types.rs  remove_unused_variable.rs  replace_referenced_tokens.rs  rule_property.rs  runtime_identifier.rs  runtime_variable.rs  (+4 more)
src/utils/: expressions_as_statement.rs  filter_pattern.rs  lines.rs  luau_config.rs  mod.rs  preserve_arguments_side_effects.rs  schema.rs  scoped_hash_map.rs  serde_one_or_many.rs  serde_string_or_default.rs  serde_string_or_struct.rs  sourcemap_cache.rs  timer.rs
tests/: bundle.rs  cli.rs  frontend.rs  fuzz.rs  fuzz_generator.rs  fuzz_iterator_paths.rs  fuzzed.rs  rules.rs  utils.rs
tests/ast_fuzzer/: budget.rs  combination.rs  fuzzer_work.rs  mod.rs  random.rs
tests/fuzzed_test_cases/: a.lua  b.lua  c.lua  full_moon_stackoverflow.lua
tests/rule_tests/: append_text_comment.rs  compute_expression.rs  convert_const_to_local.rs  convert_index_to_field.rs  convert_luau_number.rs  convert_luau_numbers.rs  convert_lux_to_roact.rs  convert_require.rs  convert_square_root_call.rs  filter_early_return.rs  global_function_to_assign.rs  group_local_assignment.rs  inject_value.rs  make_assignment_local.rs  mod.rs  no_local_function.rs  remove_assertions.rs  remove_attribute.rs  remove_call_parens.rs  remove_comments.rs  remove_compound_assignment.rs  remove_continue.rs  remove_debug_profiling.rs  remove_empty_do.rs  remove_floor_division.rs  remove_generalized_iteration.rs  remove_if_expression.rs  remove_interpolated_string.rs  remove_method_call.rs  remove_method_definition.rs  remove_nil_declaration.rs  remove_number_literals.rs  remove_types.rs  remove_unused_if_branch.rs  remove_unused_variable.rs  remove_unused_while.rs  rename_variables.rs  require_self.rs  virtual_execution.rs
tests/snapshots/: bundle__without_rules__bundle_without_rules_override_require.snap  bundle__without_rules__bundle_without_rules_require_json_file_with_object.snap  bundle__without_rules__bundle_without_rules_require_lua_file.snap  bundle__without_rules__bundle_without_rules_require_lua_file.snap.new  bundle__without_rules__bundle_without_rules_require_lua_file_after_declaration.snap  bundle__without_rules__bundle_without_rules_require_lua_file_forward_exported_type_functions.snap  bundle__without_rules__bundle_without_rules_require_lua_file_forward_exported_types.snap  bundle__without_rules__bundle_without_rules_require_lua_file_forward_exported_types_with_generics.snap  bundle__without_rules__bundle_without_rules_require_lua_file_forward_exported_types_with_generics.snap.new  bundle__without_rules__bundle_without_rules_require_lua_file_nested.snap  bundle__without_rules__bundle_without_rules_require_lua_file_twice.snap  bundle__without_rules__bundle_without_rules_require_lua_file_twice_with_different_paths.snap  bundle__without_rules__bundle_without_rules_require_lua_file_with_field_expression.snap  bundle__without_rules__bundle_without_rules_require_lua_file_with_statement.snap  bundle__without_rules__bundle_without_rules_require_skip_unknown_module.snap  bundle__without_rules__bundle_without_rules_require_small_bundle_case.snap  bundle__without_rules__bundle_without_rules_require_toml_with_object.snap  bundle__without_rules__bundle_without_rules_require_txt_file.snap  bundle__without_rules__bundle_without_rules_require_yaml_with_array.snap  bundle__without_rules__bundle_without_rules_require_yml_with_object.snap  bundle__without_rules__cyclic_requires__simple_direct_cycle_in_required_file.snap  convert_help_command.snap  help_command.snap  (+33 more)
(+764 files in other folders)
