[package]
name = "darklua"
version = "0.13.0"
authors = ["jeparlefrancais <jeparlefrancais21@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Transform Lua scripts"
repository = "https://github.com/seaofvoices/darklua"
homepage = "https://darklua.com"
license = "MIT"
keywords = ["lua", "obsfucation", "minify"]
exclude = ["site"]

[badges]
github = { repository = "seaofvoices/darklua" }

[lib]
name = "darklua_core"
path = "src/lib.rs"

[[bin]]
name = "darklua"
path = "src/bin.rs"

[features]
default = ["stacker"]
tracing = ["dep:tracing"]
stacker = ["full_moon/stacker"]

[dependencies]
anstyle = "1.0.6"
clap = { version = "4.5.3", features = ["derive"] }
durationfmt = "0.1.1"
elsa = "1.10.0"
env_logger = "0.11.3"
full_moon = { version = "0.19.0", features = ["roblox"] }
json5 = "0.4.1"
log = "0.4.21"
pathdiff = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
toml = "0.8.11"
tracing = { version = "0.1", optional = true }
wax = "0.5.0"

[dev-dependencies]
assert_cmd = "2.0.14"
criterion = { version = "0.5.1", features = ["html_reports"] }
include_dir = "0.7.3"
insta = { version = "1.36.1", features = ["json", "filters"] }
paste = "1.0.14"
pretty_assertions = "1.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde_bytes = "0.11.14"
tempfile = "3.10.1"
tracing-subscriber = "0.3.18"
tracing-tracy = "0.11.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
node-sys = "0.4.2"
web-sys = { version = "0.3.69", features = ["Window", "Performance"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = { version = "3.4.4", features = ["termination"] }
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"

# This is needed because when runnin `cargo test`, the library and its
# dependencies are build with the `dev` profile. To make sure full_moon
# does not stack overflow when parsing complex code, it needs to be compiled
# at optimization level 3 (which is what release mode uses)
# Info about profiles can be found there:
#     https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev.package.full_moon]
opt-level = 3

[[bench]]
name = "process_bench"
harness = false

[[bench]]
name = "parse_bench"
harness = false
