[package]
name = "darklua-wasm"
version = "0.1.0"
authors = ["jeparlefrancais <jeparlefrancais21@gmail.com>"]
edition = "2018"
repository = "https://github.com/seaofvoices/darklua"
description = "WebAssembly package for darklua"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

js-sys = "0.3.77"
darklua = { path = "../..", default-features = false }
serde = { version = "1.0", features = ["derive"] }
json5 = "0.4.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.45"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-Oz",
    # for Rust 1.87.0
    # https://github.com/rust-lang/rust/issues/141048
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
]
